postgresql-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgresql-pod
  namespace: demo-saja
  labels:
    app: postgresql-pod
spec:
  containers:
    - name: postgresql-container
      image: postgres:17.6-bookworm
      ports:
        - containerPort: 5432
