result-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: result-pod
  namespace: demo-saja
  labels:
    app: result-pod
spec:
  containers:
    - name: results-container
      image: saja123/result-app:latest
      ports:
        - containerPort: 80
