vote-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vote-pod
  namespace: demo-saja
  labels:
    app: vote-pod
spec:
  containers:
    - name: voting-container
      image: saja123/voting-app:latest
      ports:
        - containerPort: 80
