worker-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: worker-pod
  namespace: demo-saja
  labels:
    app: worker-pod
spec:
  containers:
    - name: worker-container
      image: saja123/worker-app:latest
