postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service
  namespace: demo-saja
spec:
  selector:
    app: postgresql-pod          # Selects Pods labeled "app=nginx" (our Deployment’s Pods)
  ports:
    - protocol: TCP
      port: 5432               # The port that the Service will serve on
      targetPort: 5432         # The port on the Pod’s container to forward traffic to
  type: ClusterIP
